--- a/parallel_robotics/20220718122326-parallel_robotics_capstone.org
+++ b/parallel_robotics/20220718122326-parallel_robotics_capstone.org
@@ -16,7 +16,7 @@
 - positioning error is cumumlative
 - long, complex chain structures
 - rigidity decreases as chain count increases
-- joint flexibility dependent on upstream and downstream joints
+- joint flexibility is dependent on upstream and downstream joints
 
 *** parallel (like a spider)
 
