--- a/reports/week_1/report_1.org
+++ b/reports/week_1/report_1.org
@@ -6,7 +6,7 @@
 
 * Summary of Accomplishments
 
-Several discussions pertaining to project viability:
+Several discussions about project viability:
 
 * Capstone adviser meeting
 The team met with Masoud in the ECE capstone lab to discuss project proposals, expectations, and what effort results in a succesful team. Ten ideas were briefly discussed:
